// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Interested Party Comments (Shared/Published View) GET /interested-party-comments when item count is 0 should render the shared interested party comments page with status 200 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/documents" class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Address</th>
                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Comment</th>
                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Supporting documents</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body"></tbody>
    </table>
</main>"
`;

exports[`Interested Party Comments (Shared/Published View) GET /interested-party-comments with data should render the shared interested party comments page with status 200 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal SHAREDTEST</span>
            <h1 class="govuk-heading-l">Interested party comments</h1>
        </div>
    </div>
    <p class="govuk-body"><a href="/documents/2/bulk-download/documents" class="govuk-link">Download all documents</a>
    </p>
    <h2>Shared IP comments</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Address</th>
                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Comment</th>
                <th scope="col" class="govuk-table__header govuk-!-width-one-quarter">Supporting documents</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell">No address</td>
                <td class="govuk-table__cell">
                    <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 1</div>
                </td>
                <td class="govuk-table__cell">No documents</td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell">No address</td>
                <td class="govuk-table__cell">
                    <div class="pins-show-more" data-label="Read more" data-mode="html">Comment 2</div>
                </td>
                <td class="govuk-table__cell">No documents</td>
            </tr>
        </tbody>
    </table>
</main>"
`;
